# selenium-wrapper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
selenium_wrapper/: SeleniumBrowser.py  __init__.py
tests/: conftest.py  test_selenium_browser.py
